--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t tinyzh/travis-ci:latest .
-  - docker push tinyzh/travis-ci:latest
+  - docker build -t tinyzh/my-docker-demo:latest .
+  - docker push tinyzh/my-docker-demo:latest
